# nglpy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Graph.py  GraphStructure.cpp  GraphStructure.h  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  UnionFind.cpp  ball_tree_numba_parallel.py  emptyRegionImpl.hpp  ngl.hpp  ngl.i  nglGeometry.hpp  prebuiltNGLimpl.hpp  profile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_numba.py  test_plot.py  tox.ini  travis.sh
.github/workflows/: publish.yaml  quality.yaml  test.yaml
deploy/: .readthedocs.yml  build.sh  test.sh  upload.sh
docs/: Logo Creation.ipynb  Makefile  api.rst  conf.py  environment.yml  index.rst  install.rst  make.bat  usage.rst
include/: prebuiltNGLimpl.hpp
nglpy/: EmptyRegionGraph.py  Graph.py  Graph2.py  PrebuiltGraph.py  ProbabilisticGraph.py  SKLSearchIndex.py  SearchIndex.py  UnionFind.py  __init__.py  conic_spanners.py  core.cpp  index.py  prune.cu  utils.py
nglpy/tests/: test_Graph.py  test_bskeleton.py  test_conic_spanners.py  test_prebuilt.py  test_utils.py
nglpy/tests/data/: edges.txt  gold_edges_relaxed.txt  gold_edges_strict.txt  points.txt
pyerg/: Graph.py  __init__.py
pyerg/tests/: test_bskeleton.py
test/: Dockerfile  install.sh  upload.sh
